Fixed dropdown TWAP overlap

--- a/src/components/OrderForm/style.scss
+++ b/src/components/OrderForm/style.scss
@@ -11,7 +11,7 @@
     padding-left: 8px;
 
     p {
-      width: calc(100% - 20px);
+      width: calc(100% - 32px);
       text-overflow: ellipsis;
       white-space: nowrap;
       overflow: hidden;
